--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "prettify": "prettier --write ../server"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
